...
        case gallery = 2
        case search = 3
        case profile = 4

        var title: String {
            switch self {
            case .home: return "ホーム"
            case .post: return "投稿"
            case .gallery: return "ギャラリー"
            case .search: return "検索"
            case .profile: return "プロフィール"
            }
        }
...
